# design-pattern

./: README.md
code/: CMakeLists.txt  export.h  factory.h  singleton.cpp  singleton.h  visitor.cpp  visitor.h
